feat: divided pages for admin and member. Created 404 Page and layout for Emit page
